--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f586cc56",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eeff1b99",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2299d499",
    "metadata": {},
    "outputs": [],
@@ -37,12 +37,13 @@
     "DATA_FOLDER = \"data\"\n",
     "WAV_FOLDER = os.path.join(DATA_FOLDER, \"music\", \"wav\")\n",
     "\n",
-    "WAV_FILES = list(map(lambda x: os.path.join(WAV_FOLDER, x), os.listdir(WAV_FOLDER)))[0:1]"
+    "# WAV_FILES = list(map(lambda x: os.path.join(WAV_FOLDER, x), os.listdir(WAV_FOLDER)))[0:1]\n",
+    "WAV_FILES = [\"data/music/wav/file_001.wav\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "79a13d15",
    "metadata": {},
    "outputs": [],
@@ -54,13 +55,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fcda2d1",
+   "execution_count": 21,
+   "id": "99af1e8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                                                                                                | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counting in data/music/wav/file_001.wav\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:07<00:00,  7.75s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "for wav in tqdm(WAV_FILES):\n",
     "    matrix = np.zeros((MSIZE, MSIZE), dtype=\"uint32\")\n",
+    "    print(\"Counting in\", wav)\n",
     "    with open(wav, \"rb\") as f:\n",
     "        raw_data = f.read()\n",
     "    \n",
@@ -75,10 +100,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb2e56e9",
+   "execution_count": 22,
+   "id": "3bdab248",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([33163, 11876], dtype=uint32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix[0, :2]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "03305f63",
+   "metadata": {},
    "source": [
     "res_matrix = gaussian_filter(\n",
     "    matrix,\n",
@@ -92,11 +136,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df140210",
+   "cell_type": "raw",
+   "id": "fd141084",
    "metadata": {},
-   "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8,6), dpi=120)\n",
     "ax.grid()\n",
@@ -104,6 +146,29 @@
     "# ax.set(xlabel='common xlabel', ylabel='common ylabel')\n",
     "\n",
     "sns.heatmap(data=res_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "dbf18385",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.True_"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = np.fromfile(\"res1.bin\", dtype=np.uint32).reshape((MSIZE, MSIZE))\n",
+    "\n",
+    "np.all(np.equal(matrix, test))"
    ]
   }
  ],
