--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "eeff1b99",
    "metadata": {},
    "outputs": [],
@@ -29,99 +29,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2299d499",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_FOLDER = \"data\"\n",
-    "WAV_FOLDER = os.path.join(DATA_FOLDER, \"music\", \"wav\")\n",
-    "\n",
-    "# WAV_FILES = list(map(lambda x: os.path.join(WAV_FOLDER, x), os.listdir(WAV_FOLDER)))[0:1]\n",
-    "WAV_FILES = [\"data/music/wav/file_001.wav\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "79a13d15",
+   "execution_count": 50,
+   "id": "40f3505a",
    "metadata": {},
    "outputs": [],
    "source": [
     "MSIZE = 256\n",
-    "\n",
-    "SIGMA = [7.0, 7.0]"
+    "SIGMA = (5.0, 5.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "99af1e8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|                                                                                                                                                | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counting in data/music/wav/file_001.wav\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:07<00:00,  7.75s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for wav in tqdm(WAV_FILES):\n",
-    "    matrix = np.zeros((MSIZE, MSIZE), dtype=\"uint32\")\n",
-    "    print(\"Counting in\", wav)\n",
-    "    with open(wav, \"rb\") as f:\n",
-    "        raw_data = f.read()\n",
-    "    \n",
-    "    n = len(raw_data)\n",
-    "    \n",
-    "    for i in range(n-1):\n",
-    "        idx1 = raw_data[i]\n",
-    "        idx2 = raw_data[i+1]\n",
-    "        \n",
-    "        matrix[idx1, idx2] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "3bdab248",
+   "execution_count": 46,
+   "id": "d9a3e74e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([33163, 11876], dtype=uint32)"
+       "'matrices/music/file_100.wav.bin'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "matrix[0, :2]"
+    "MATRIX_DIR = \"matrices\"\n",
+    "MUSIC_DIR = \"music\"\n",
+    "MATRIX_FULL_DIR = os.path.join(MATRIX_DIR, MUSIC_MDIR)\n",
+    "MATRICIES = list(map(\n",
+    "    lambda x: os.path.join(MATRIX_FULL_DIR, x),\n",
+    "    os.listdir(MATRIX_FULL_DIR)\n",
+    "))\n",
+    "MATRICIES[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3bdab248",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.92 s ± 63.1 ms per loop (mean ± std. dev. of 5 runs, 5 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r 5 -n 5 \n",
+    "for mat in MATRICIES:\n",
+    "    tmp_mat = np.fromfile(mat, dtype=np.uint32).reshape((MSIZE, MSIZE))\n",
+    "    res_matrix = gaussian_filter(\n",
+    "        tmp_mat,\n",
+    "        SIGMA,\n",
+    "        mode=\"constant\",\n",
+    "        cval=tmp_mat.mean()\n",
+    "    )"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "03305f63",
+   "id": "7727981e",
    "metadata": {},
    "source": [
     "res_matrix = gaussian_filter(\n",
